# ot-harjoitustyo

./: .coverage  .coveragerc  .gitignore  README.md  pylintrc  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  peliohje.md  tuntikirjaus  vaatimusmäärittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/dokumentation/: tuntikirjanpito.md  vaatimusmäärittely.md
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: kaavio.md  sekvenssi1
poetry-projekti/: .coverage
poetry-projekti/dokumentaatio/: changelog.md  tuntikirjaus  vaatimusmäärittely.md
poetry-projekti/src/: .coverage  commands.py  game.py  pyproject.toml  rooms.csv  rooms.py  tasks.py
poetry-projekti/src/tests/: test1_test.py
src/: commands.py  enemies.py  game.py  interface.py  items.csv  items.py  rooms.csv  rooms.py  save.csv
src/resources/: enemies.csv  items.csv  room_save.csv  rooms.csv
src/tests/: test1_test.py
