[tool.poetry]
name = "poetry-projekti"
version = "0.1.0"
description = ""
authors = ["Oskari <oskari.lamsa@helsinki.fi>"]
readme = "README.md"
packages = [{include = "poetry_projekti"}]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.3.0"
pytest = "^7.2.2"
coverage = "^7.2.2"
invoke = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
